# advent-of-code-2020

./: .gitattributes  .gitignore  Cargo.toml  README.md
bootstrapper/: Cargo.toml  day_template.hbs
bootstrapper/src/: main.rs
questions/: day1.html  day2.html  day3.html  day4.html  day5.html  day6.html
solutions/: Cargo.toml
solutions/src/: day01.rs  main.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  lib.rs  main.rs
