[package]
name = "bootstrapper"
version = "0.1.0"
authors = ["alu <alu@byteberry.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
handlebars = "3.5.1"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde = "1.0.117"
serde_json = "1.0.59"
toml = "0.5.7"
